# sphinx-filter-tabs

./: .gitignore  .pre-commit-config.yaml  .pyre_configuration  AGENT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  setup_patch.py  tox.ini  validate_dual_implementation.py
.github/workflows/: test.yml
docs/: _changelog.rst  _installation.rst  _usage.rst  accessibility.rst  changelog.rst  conf.py  index.rst  installation.rst  usage.rst
filter_tabs/: __init__.py  admonitions.py  assets.py  config.py  directives.py  extension.py  models.py  nodes.py  parsers.py  render_fallback.py  render_html.py  renderer.py  transforms.py  utils.py
filter_tabs/locale/da/LC_MESSAGES/: sphinx-filter-tabs.mo  sphinx-filter-tabs.po
filter_tabs/static/: filter_tabs.css  filter_tabs.js  filter_tabs_accessible.css  filter_tabs_common.css  filter_tabs_legacy.css
requirements/: base.txt  dev.txt  docs.txt
scripts/: cleanup_legacy.sh  complete_cleanup.sh  dev.sh  dev_validation.sh  export-project.sh  integrate_refactoring.py  setup_dev.sh  setup_dual_implementation.sh  test_cleanup.sh  version_consistency_fixes.sh
test-root/: conf.py
tests/: conftest.py  test_accessibility_compliance.py  test_coverage_edge_cases.py  test_dual_implementation.py  test_extension.py  test_security.py
