[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-filter-tabs"
version = "0.1.0"
description = "A Sphinx extension for accessible, JS-free filterable content tabs."
readme = "README.md"
license = { text = "GNU General Public License v3.0" }
authors = [{ name = "Aputsiak Niels Janussen", email = "aputsiak+sphinx@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation"
]
requires-python = ">=3.8"
dependencies = ["Sphinx>=4.0,<8.0"]

[project.urls]
Homepage = "https://github.com/yourusername/sphinx-filter-tabs"
Repository = "https://github.com/yourusername/sphinx-filter-tabs.git"
Issues = "https://github.com/yourusername/sphinx-filter-tabs/issues"

[project.entry-points."sphinx.extensions"]
filter_tabs = "filter_tabs.extension:setup"

[tool.setuptools.packages.find]
# This tells setuptools where to look for your Python packages.
# It will correctly find the 'filter_tabs' directory.
where = ["."]
include = ["filter_tabs*"]

[tool.setuptools.package-data]
# This explicitly tells setuptools: "for the 'filter_tabs' package,
# find all files in the 'static' directory that end with .css and include them."
filter_tabs = ["static/*.css"]
