[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
keywords = ["sphinx", "extension", "tabs", "filter", "documentation", "css-only", "accessibility", "keyboard-navigation"]
name = "sphinx-filter-tabs"
version = "1.4.1"
description = "A Sphinx extension for accessible, CSS-first filterable content tabs."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "GNU General Public License v3.0" }
authors = [{ name = "Aputsiak Niels Janussen", email = "aputtu+sphinx@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation"
]
requires-python = ">=3.10"
dependencies = ["Sphinx>=7.0,<10.0"]

[project.urls]
Homepage = "https://github.com/aputtu/sphinx-filter-tabs"
Repository = "https://github.com/aputtu/sphinx-filter-tabs.git"
Issues = "https://github.com/aputtu/sphinx-filter-tabs/issues"

[project.entry-points."sphinx.extensions"]
filter_tabs = "filter_tabs:setup"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long — handled by formatter
    "E701",  # multiple statements on one line — intentional for stub node classes
]

[tool.ruff.lint.isort]
known-first-party = ["filter_tabs"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# Sphinx has no published type stubs and its source uses Python 3.12+ syntax.
# Skip parsing it entirely; our own annotations are sufficient.
module = "sphinx.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
# Sphinx's add_node() **kwargs stubs expect bool; actual API accepts visitor tuples.
# This is a known stub inaccuracy upstream.
module = "filter_tabs"
disable_error_code = ["arg-type"]

[tool.setuptools.packages.find]
# This tells setuptools where to look for your Python packages.
# It will correctly find the 'filter_tabs' directory.
where = ["."]
include = ["filter_tabs*"]

[tool.setuptools.package-data]
# This explicitly tells setuptools: "for the 'filter_tabs' package,
# find all files in the 'static' directory that end with .css and include them."
filter_tabs = ["static/*.css"]
